Fix issue when display name was too long

--- a/streams-react/src/components/EditWrapper/EditWrapper.module.css
+++ b/streams-react/src/components/EditWrapper/EditWrapper.module.css
@@ -2,6 +2,16 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  width: 100%;
+  padding-left: 5px;
+  padding-right: 20px;
+  border-radius: 5px;
+  background-color: rgba(0,0,0,0.8);
+}
+.formDisplayName--active {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   padding-left: 5px;
   padding-right: 20px;
   border-radius: 5px;
