--- a/streams-react/src/components/Video/Video.module.css
+++ b/streams-react/src/components/Video/Video.module.css
@@ -27,10 +27,22 @@
   border-radius: 5px;
   object-fit: contain;
 }
+.video__tray {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  border: 1px solid red;
+}
 .displayname {
   position: absolute;
   bottom: 0;
   left: 15px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 35%;
   font-size: 1.2em;
   padding: 5px 10px;
   margin: 20px 0;
